# agentjail

./: .env.template  .gitignore  BENCH_RESULTS.md  Cargo.toml  Dockerfile  Dockerfile.server  Dockerfile.web  Makefile  PLAN.md  PLATFORM.md  README.md  docker-compose.platform.yml  docker-compose.yml
bench-results/: README.md  noop-baseline.json  noop-c16-baseline.json  noop-c16-phase1.json  noop-current.json  noop-full-c16-phase1.json  noop-full-phase1.json  snapshot-create-phase1.json  snapshot-repeat-current.json  snapshot-repeat-phase1.json  stdout-heavy-baseline.json  stdout-heavy-current.json
crates/agentjail/: Cargo.toml
crates/agentjail-bench/: Cargo.toml  README.md
crates/agentjail-bench/src/: env.rs  fixtures.rs  main.rs  metrics.rs  runner.rs
crates/agentjail-bench/src/scenarios/: fork.rs  mod.rs  noop.rs  snapshot.rs  stdout_heavy.rs
crates/agentjail-cli/: Cargo.toml
crates/agentjail-cli/src/: app.rs  main.rs  tui.rs  ui.rs
crates/agentjail-ctl/: Cargo.toml
crates/agentjail-ctl/migrations/: 0001_init.sql  0002_workspaces_snapshots.sql  0003_workspace_idle.sql  0004_workspace_domains.sql  0005_jail_config_snapshot.sql  0006_jail_live_stats.sql  0007_tenant_id.sql  0008_credentials_tenant.sql  0009_sessions_tokens.sql
crates/agentjail-ctl/src/: audit.rs  auth.rs  credential.rs  error.rs  exec.rs  flavors.rs  jails.rs  lib.rs  routes.rs  sampler.rs  session.rs  snapshots.rs  tenant.rs  workspaces.rs
crates/agentjail-ctl/src/db/: audit_pg.rs  credentials_pg.rs  jails_pg.rs  mod.rs  sessions_pg.rs  snapshots_pg.rs  tokens_pg.rs  workspaces_pg.rs
crates/agentjail-ctl/src/routes/: audit.rs  clone_jail.rs  credentials.rs  exec.rs  exec_git.rs  exec_monitor.rs  fork.rs  health.rs  jails.rs  mod.rs  sessions.rs  settings.rs  snapshots.rs  stream.rs  workspaces.rs  workspaces_exec.rs
crates/agentjail-ctl/src/workspaces/: idle.rs  slug.rs
crates/agentjail-ctl/tests/: api.rs  clone_jail_test.rs
crates/agentjail-phantom/: Cargo.toml
crates/agentjail-phantom/src/: error.rs  keys.rs  lib.rs  provider.rs  proxy.rs  token.rs
crates/agentjail-phantom/src/providers/: anthropic.rs  github.rs  mod.rs  openai.rs  stripe.rs
crates/agentjail-phantom/tests/: proxy_integration.rs  token_property.rs
crates/agentjail-server/: Cargo.toml
crates/agentjail-server/src/: gateway.rs  main.rs
crates/agentjail-server/tests/: gateway_test.rs  wire.rs
crates/agentjail-server/tests/harness/: mod.rs
crates/agentjail/examples/: basic.rs  measure.rs
crates/agentjail/src/: cgroup.rs  config.rs  error.rs  events.rs  exec.rs  fork.rs  gpu.rs  landlock.rs  lib.rs  mount.rs  namespace.rs  netlink.rs  pipe.rs  proxy.rs  run.rs  run_internal.rs  seccomp.rs  snapshot.rs  veth.rs
crates/agentjail/tests/: audit_regression_test.rs  fork_test.rs  gpu_test.rs  inbound_reach_test.rs  integration.rs  malicious_test.rs  seccomp_blocklist_test.rs  security_test.rs  snapshot_test.rs
crates/agentjail/tests/common/: mod.rs
docs/: flavors.md  internal.md  tenancy.md
scripts/: e2e-workspaces.sh  e2e-workspaces.ts  seed-flavors.sh
scripts/demos/: 1-ai-assistant.py  1-ai-assistant.ts  2-review-bot.ts  3-background-agent.ts  4-app-builder.ts  README.md  _client.ts
src/: config.rs  mount.rs  namespace.rs  run.rs  seccomp.rs
web/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/audit/: page.tsx
web/app/credentials/: page.tsx
web/app/sessions/: page.tsx
web/app/sessions/[id]/: page.tsx
web/components/: Badge.tsx  Button.tsx  Card.tsx  CodeBlock.tsx  CopyButton.tsx  CredentialCard.tsx  EmptyState.tsx  Input.tsx  Kbd.tsx  KeyValue.tsx  MetricTile.tsx  PageHeader.tsx  PhantomAuditTable.tsx  RelativeTime.tsx  SessionEnv.tsx  SessionRow.tsx  Sidebar.tsx  StatusDot.tsx  Table.tsx
web/lib/: api.ts  cn.ts
web/src/: App.tsx  index.css  styles.css
web/src/components/: AuditList.tsx  Button.tsx  CodeEditor.tsx  Empty.tsx  Flow.tsx  Input.tsx  LangBadge.tsx  Layout.tsx  Login.tsx  Logo.tsx  Metric.tsx  Orbit.tsx  OutputBlock.tsx  Panel.tsx  Pill.tsx  ServiceBadge.tsx  ServicePicker.tsx  Shell.tsx  Sparkline.tsx  Stat.tsx  ui.tsx
web/src/components/credentials/: AttachForm.tsx  ServiceCard.tsx
web/src/components/docs/: Code.tsx  DocPage.tsx  DocsShell.tsx
web/src/components/jails/: ForkGraph.tsx  JailDetail.tsx  JailsList.tsx
web/src/components/landing/: CodeShowcase.tsx
web/src/components/ledger/: Chip.tsx  Pager.tsx  SearchBox.tsx  useListNav.ts
web/src/components/overview/: ActiveSessionsPanel.tsx  Hero.tsx  MetricGrid.tsx  StreamBlock.tsx  VaultPanel.tsx
web/src/components/playground/: EditorPanel.tsx  Gallery.tsx  Terminal.tsx
web/src/components/sessions/: MintForm.tsx  SessionRow.tsx
web/src/lib/: api.ts  auth.tsx  format.ts  recipes.ts  showcase.ts  useSeries.ts
web/src/pages/: Accounts.tsx  Audit.tsx  Credentials.tsx  Dashboard.tsx  Jails.tsx  Landing.tsx  Login.tsx  Overview.tsx  Playground.tsx  Runs.tsx  Sessions.tsx  Settings.tsx  Snapshots.tsx  Stream.tsx  Workspaces.tsx
web/src/pages/docs/: Forking.tsx  Gateway.tsx  Network.tsx  Phantom.tsx  PlaygroundDoc.tsx  Quickstart.tsx  Sdk.tsx  Security.tsx  Snapshots.tsx  Workspaces.tsx
