[package]
name = "agentjail"
version = "0.1.0"
edition = "2024"
description = "Minimal Linux sandbox for untrusted code"
license = "MIT"
repository = "https://github.com/bugthesystem/agentjail"
keywords = ["sandbox", "security", "container", "namespace"]
categories = ["os::linux-apis", "development-tools"]

[dependencies]
rustix = { version = "0.38", features = ["process", "mount", "fs", "pipe", "runtime", "thread"] }
seccompiler = "0.4"
landlock = "0.4"
libc = "0.2"
tokio = { version = "1", features = ["process", "io-util", "rt", "sync", "time", "fs"] }
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
