[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/bugthesystem/agentjail"

[workspace.dependencies]
agentjail = { path = "crates/agentjail" }
agentjail-phantom = { path = "crates/agentjail-phantom" }
agentjail-ctl = { path = "crates/agentjail-ctl" }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
