[package]
name = "agentjail-bench"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Benchmark harness for the agentjail crate"
publish = false

[dependencies]
agentjail.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
serde.workspace = true
serde_json.workspace = true
clap = { version = "4", features = ["derive"] }
anyhow.workspace = true
libc = "0.2"
