[package]
name = "agentjail-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for agentjail sandbox"

[[bin]]
name = "agentjail"
path = "src/main.rs"

[dependencies]
agentjail.workspace = true
tokio.workspace = true
ratatui = "0.26"
crossterm = "0.27"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
libc = "0.2"
