[package]
name = "agentjail-phantom"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Phantom-token reverse proxy: sandboxes see phm_<hex>, upstream sees real keys"
keywords = ["sandbox", "proxy", "ai", "credentials", "security"]
categories = ["network-programming", "web-programming::http-server"]

[dependencies]
axum = { version = "0.7", default-features = false, features = ["http1", "tokio", "matched-path"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time", "macros"] }
tower = { version = "0.5", default-features = false }
hyper = { version = "1", default-features = false, features = ["http1", "server"] }
http = "1"
http-body-util = "0.1"
bytes = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
futures-util = { version = "0.3", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
subtle = "2"
rand = "0.8"
hex = "0.4"
thiserror.workspace = true
tracing = "0.1"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", default-features = false, features = ["http1", "tokio", "json"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
