[package]
name = "agentjail"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Minimal Linux sandbox for untrusted code"
keywords = ["sandbox", "security", "container", "namespace"]
categories = ["os::linux-apis", "development-tools"]

[dependencies]
rustix = { version = "0.38", features = ["process", "mount", "fs", "pipe", "runtime", "thread"] }
seccompiler = "0.4"
landlock = "0.4"
libc = "0.2"
tokio = { version = "1", features = ["process", "io-util", "rt", "sync", "time", "fs", "net", "macros"] }
thiserror.workspace = true
sha2 = { version = "0.10", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
